# libclang-lab

./: .gitignore  AGENTS.md  CLAUDE.md  compile_flags_diff.md  install_deps.sh  main.py  pyproject.toml
cidx-cpp/: .clang-format  .clang-tidy  .containerignore  .gitignore  CMakeLists.txt  Containerfile.rhel9  Makefile
cidx-cpp/.claude/handoff/m5-cpp-ast-review/logs/: senior-developer.md
cidx-cpp/docs/: DESIGN_entity_edge_plan.md
cidx-cpp/docs/adr/: ADR-006-cpp-ast-port.md  ADR-007-cpp-graph-port.md  ADR-008-entity-edge.md  ADR-009-astgraph.md  architect-log-entity-edge.md
cidx-cpp/examples/souffle/: 01_basics.dl  02_callgraph.dl  03_types.dl  04_deadcode.dl  05_oop.dl  06_metrics.dl  07_writeback.dl  08_dataflow.dl  09_control_flow.dl  10_templates.dl  11_dependencies.dl  12_ast_inventory.dl  README.md  ast_prelude.dl
cidx-cpp/examples/souffle-index/: 01_inventory.dl  02_callgraph.dl  03_references.dl  04_hierarchy.dl  05_architecture.dl  06_impact.dl  07_metrics.dl  08_templates.dl  09_cross_file.dl  10_writeback.dl  11_all_paths.dl  README.md  cidx_base.dl  cidx_views.sql  run.sh  validate.sh
cidx-cpp/examples/souffle-index/docs/: 01-runner.md  02-database-views.md  03-base-relations.md  04-inventory.md  05-callgraph.md  06-references.md  07-hierarchy.md  08-architecture.md  09-impact.md  10-metrics.md  11-templates.md  12-cross-file.md  13-writeback.md  14-all-paths.md  README.md
cidx-cpp/scripts/: build-rhel9.sh  build-static-libclang.sh  e2e_librdkafka.sh  e2e_wrong_order.sh  gen_kind_names.py  parity_check.sh  wf_entity_edge.js  wf_m6_graph_port.js
cidx-cpp/spec/: 01-technical-analysis.md  02-design.md  03-review.md  04-qa-report.md  05-graph-design.md  06-graph-impl-plan.md
cidx-cpp/spec/flatbuffer-spike/: README.md  cidx_artifact.fbs  cidx_minimal.fbs  cidx_minimal_generated.h  fb_compare.py  fb_minimal.py
cidx-cpp/spec/stories/: README.md  S01-scaffold-util-core.md  S02-storage.md  S03-libclang-shim-compiledb.md  S04-toolchain.md  S05-parser-diagnostics.md  S06-ast-indexer.md  S07-cli-write-query.md  S08-cli-index-parity-e2e.md
cidx-cpp/src/: main.cpp
cidx-cpp/src/astcache/: astcache.cpp  astcache.hpp
cidx-cpp/src/astgraph/: astgraph.cpp  astgraph.hpp  main.cpp  schema.hpp  souffle_runner.cpp  souffle_runner.hpp  souffle_stub.cpp
cidx-cpp/src/astgraph/rules/: ast_callgraph.dl
cidx-cpp/src/clangx/: ast.cpp  ast.hpp  ast_query.cpp  ast_query.hpp  libclang.cpp  libclang.hpp  parse.cpp  parse.hpp  pch.cpp  pch.hpp  toolchain.cpp  toolchain.hpp
cidx-cpp/src/cli/: args.cpp  args.hpp  commands.cpp  commands.hpp  format.cpp  format.hpp  json_out.cpp  json_out.hpp  kind_names.cpp  kind_names.hpp
cidx-cpp/src/compiledb/: compiledb.cpp  compiledb.hpp
cidx-cpp/src/graph/: emit.cpp  emit.hpp  query.cpp  query.hpp  records.hpp
cidx-cpp/src/storage/: records.hpp  sqlite.cpp  sqlite.hpp  storage.cpp  storage.hpp
cidx-cpp/src/util/: env.cpp  env.hpp  errors.hpp  files.cpp  files.hpp  hashing.cpp  hashing.hpp  json_min.cpp  json_min.hpp  logger.cpp  logger.hpp  pathutil.cpp  pathutil.hpp  prof.hpp  repo.cpp  repo.hpp  subprocess.cpp  subprocess.hpp
cidx-cpp/tests/: CMakeLists.txt  ast_query_test.cpp  ast_test.cpp  astcache_test.cpp  astgraph_test.cpp  cli_test.cpp  compiledb_test.cpp  env_logger_test.cpp  fuzzy_match_test.cpp  graph_parity_boundary_test.cpp  graph_query_test.cpp  graph_storage_test.cpp  hashing_test.cpp  include_aliasing_test.cpp  json_min_test.cpp  pathutil_test.cpp  pch_test.cpp  repo_test.cpp  storage_migration_test.cpp  storage_smoke_test.cpp  toolchain_test.cpp
cidx-cpp/tests/fixtures/: fake-driver  generate_fixtures.py  v2.db  v3.db  v4.db  v5.db
cidx-cpp/tests/fixtures/m5/: conditions_shape_area.json  dump_leaf_a.json  locals_badly.json
cidx-graph/: SKILL.md
cidx-graph/cidx_graph/: __init__.py  __main__.py  graph.py  live.py
cidx-graph/references/: api.md  building.md  libclang.md  recipes.md  schema.md
cidx-souffle/: README.md  astgraph_example.dl  cidx.dl  cidx_base.dl  cidx_views.sql  project.sql  q_callgraph.dl  q_classes.dl  q_reach.dl  query.sh  run.sh
cxq/: DEMO.md  __init__.py  __main__.py  ast_nodes.py  demo.py  demo.sh  executor.py  parser.py
docs/: DESIGN_entity_edge_plan.md  PROGRESS.md  README.md  part_1_foundations.md  part_2_navigating_ast.md  part_3_types_semantics.md  part_4_preprocessor_diagnostics.md  part_5_building_tools.md  part_6_advanced_production.md  part_7_capstone_project.md  part_8_compile_db_headers.md
docs/adr/: ADR-005-ast-cache.md
manifests/: calls.c  compile_commands.json  geometry.cpp  geometry.hpp  locals.cpp  macros.c  messy.c  shapes.c  shapes.h  template_inherit.cpp
manifests/geometry/: compile_commands.json
manifests/graphlab/: Client.hpp  README.md  UseCache.cpp  UseCache.hpp  cache.hpp  chain.cpp  chain.hpp  compile_commands.json  containers.hpp  creatures.cpp  creatures.hpp  devirt3.cpp  devirt3.hpp  devirt3_caller.cpp  dispatch.cpp  dispatch.hpp  instantiations.cpp  main.cpp  nested.cpp  nested.hpp  pipeline.cpp  pipeline.hpp  pool_widget.cpp  pool_widget.hpp  shapes.cpp  shapes.hpp  singleton.hpp  singleton_crtp.cpp
manifests/multidef/: context.hpp  helpers.hpp  server1.cpp  server2.cpp
manifests/project/: app.c  compile_commands.json  mathlib.c  mathlib.h
manifests/versioned/: README.md
project/: cidx  compile_db.py
project/docs/: adr-002-devirt-phase2-provenance-storage.md  (+5 more)
scripts/: _helpers.py  _smoke_test.py  check_compile_flags.py  dump_dependent_calls.py  p1_first_cursor.py  p1_load_and_args.py  p1_translation_unit.py  p1_walk.py  p2_ast_dump.py  p2_cursor_kinds.py  p2_locations.py  p2_main_file.py  p2_names.py  p2_tokens.py  p3_canonical.py  p3_cpp.py  p3_functions.py  p3_records.py  p3_semantics.py  p3_typedefs_enums.py  p3_types.py  p4_compiledb.py  p4_compiler_args.py  p4_diagnostics.py  p4_parse_options.py  p4_preprocessing.py  p5_callgraph.py  p5_find_refs.py  p5_linter.py  p5_metrics.py  p5_symbols.py  p6_complete.py  p6_index.py  p6_limits.py  p6_pch.py  p6_pch_header.py  p6_reparse.py  p6_scale.py  p6_unsaved.py  probe_graph_calls.py  (+6 more)
(+99 files in other folders)
