[project]
name = "libclang-lab"
version = "0.14.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
# macOS: the `libclang` wheel bundles a native dylib (18.1.1 is its newest
# release) -- works out of the box. Linux boxes: the official `clang` bindings
# (21.x) ship NO native library, so $CIDX_LIBCLANG must point at one
# (e.g. /opt/llvm-21.1.1/lib/libclang.so).
dependencies = [
    "libclang>=18.1.1; sys_platform == 'darwin'",
    "clang>=21.1.7; sys_platform != 'darwin'",
    "ipython>=9.14.1",
]

[project.scripts]
indexer = "indexer.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["project/indexer"]

[tool.pytest.ini_options]
testpaths = ["project/tests"]
pythonpath = ["project"]

[dependency-groups]
dev = [
    "pytest>=9.1.0",
]
