[project]
name = "libclang-lab"
version = "0.16.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
# macOS: the `libclang` wheel bundles a native dylib (18.1.1 is its newest
# release) -- works out of the box. Linux boxes: the official `clang` bindings
# (21.x) ship NO native library, so $CIDX_LIBCLANG must point at one
# (e.g. /opt/llvm-21.1.1/lib/libclang.so).
dependencies = [
    "libclang>=18.1.1; sys_platform == 'darwin'",
    "clang>=21.1.7; sys_platform != 'darwin'",
    "ipython>=9.14.1",
]

[project.scripts]
indexer = "indexer.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
# Force this project to be installed (editable) into the venv on every
# `uv sync` / `uv run`. Combined with the wheel mapping below, uv drops a
# `.pth` that puts `project/` on sys.path, so `import indexer` works from any
# `uv run` (ipython, python, scripts) and any cwd -- without making `project`
# itself a package. Explicit `package = true` guards against uv ever treating
# this as a non-package "virtual" project (which would skip the editable
# install and break the import, as happened with a stale env).
package = true

[tool.hatch.build.targets.wheel]
# Maps the on-disk `project/indexer/` to the top-level import name `indexer`.
packages = ["project/indexer"]

[tool.pytest.ini_options]
testpaths = ["project/tests"]
pythonpath = ["project"]

[dependency-groups]
dev = [
    "pytest>=9.1.0",
]
